@startuml
class together.capstone2together.domain.Item {
- Long id
- String title
- String content
- String sponsor
- String img
- String deadline
- String homepage
- int views
- List<ItemTag> tagList
- String available
+ void updateAvailability()
+ {static} Item create(String,String,String,String)
}
class together.capstone2together.domain.Tag {
- Long id
- String name
+ {static} Tag create(String)
}
enum together.capstone2together.domain.Status {
+  PASS
+  WAITING
+  FAIL
}
class together.capstone2together.domain.RoomMember {
- Long id
- Room room
- Member member
+ {static} RoomMember create(Room,Member)
}
class together.capstone2together.domain.Room {
- Long id
- Item item
- Member member
- String title
- String content
- int capacity
- String city
- Survey survey
- List<RoomMember> roomMemberList
+ {static} Room create(Item,Member,String,String,int,String,Survey)
+ boolean isFull()
}
class together.capstone2together.domain.Member {
- String id
- String password
- String name
- String kakaotalkId
- int point
- List<MemberTag> tagList
- List<Room> ledRooms
- List<RoomMember> joinedRooms
- List<Pick> pickList
}
class together.capstone2together.domain.Interest {
- Long id
- Member member
- Item item
- int score
+ {static} Interest create(Member,Item,int)
}
class together.capstone2together.domain.MemberTag {
- Long id
- Member member
- Tag tag
+ {static} MemberTag create(Member,Tag)
}
class together.capstone2together.domain.Pick {
- Long id
- Member member
- Item item
+ {static} Pick create(Member,Item)
}
class together.capstone2together.domain.ItemTag {
- Long id
- Tag tag
- Item item
+ {static} List<ItemTag> create(List<Tag>,Item)
}
class together.capstone2together.domain.Question {
- Long id
- List<String> questionList
}
class together.capstone2together.domain.AI {
- Long id
- Member member
- Item item
}
class together.capstone2together.domain.Survey {
- Long id
- Question question
- LocalDateTime localDateTime
}
class together.capstone2together.domain.SurveyAnswer {
- Long id
- Room room
- Member member
- Question question
- List<String> answer
- Status status
- LocalDateTime localDateTime
+ {static} SurveyAnswer create(Room,Member,Question,List<String>)
}


java.io.Serializable <|.. together.capstone2together.domain.Item
java.io.Serializable <|.. together.capstone2together.domain.Member
java.io.Serializable <|.. together.capstone2together.domain.ItemTag
@enduml